[gd_scene load_steps=4 format=3 uid="uid://wfh6ua2stjsi"]

[ext_resource type="Script" uid="uid://xhdvfuhbe1ed" path="res://scenes/pause_menu.gd" id="1_n87rw"]
[ext_resource type="AudioStream" uid="uid://b38yo1o7mpeeo" path="res://sounds/smb_pause.mp3" id="2_myx47"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myx47"]
bg_color = Color(0.019607844, 0.019607844, 0.019607844, 0.5137255)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 15.0
expand_margin_right = 5.0
expand_margin_bottom = 15.0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 191.0
offset_bottom = 222.0
script = ExtResource("1_n87rw")

[node name="Panel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_myx47")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 6
text = "Resume"

[node name="Restart" type="Button" parent="Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 6
text = "Restart"

[node name="MusicButton" type="CheckButton" parent="Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 6
button_pressed = true
text = "Music"

[node name="SFXButton" type="CheckButton" parent="Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 6
button_pressed = true
text = "SFX"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 6
text = "Exit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("2_myx47")

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="toggled" from="Panel/VBoxContainer/MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/SFXButton" to="." method="_on_sfx_button_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
